# selkies

./: .gitignore  BUILD_README.md  Dockerfile.py-build  SIMPLE_DEVELOP.MD  build-all-selkies.sh  build-selkies-windows.ps1  build-with-docker.sh  build.sh  docker-compose.build.yml  docker-compose.yml  pyproject.toml
addons/example/: Dockerfile  selkies-gstreamer-entrypoint.sh
addons/gst-web/src/: app.js  webrtc.js
addons/js-interposer/: build_deb.sh
addons/turn-rest/: app.py
src/selkies/legacy/: signalling_web.py
src/selkies_gstreamer/: __main__.py
